# yder

./: .gitignore  .travis.yml  API.md  API_8md.html  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_func.html  group__const.html  group__init.html  group__log.html  index.html  libyder.pc.in  menudata.js  modules.html  yder_8c.html  yder_8h.html  yder_8h_source.html
.github/workflows/: codeql-analysis.yml  main.yml
cmake-modules/: CMakeUninstall.cmake.in  FindOrcania.cmake  FindSubunit.cmake  FindSystemd.cmake  YderConfig.cmake.in
doc/: doxygen.cfg
doc/html/: README_8md.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_func.html  group__const.html  group__init.html  group__log.html  index.html  menudata.js  modules.html  yder_8c.html  yder_8h.html  yder_8h_source.html
doc/html/search/: all_1.js  all_4.js  files_1.js  functions_0.js  groups_2.js  pages_0.js  searchdata.js
examples/: .gitignore  Makefile  log_callback.c  log_combined.c  log_console.c  log_file.c  log_journald.c  log_newline.c  log_syslog.c
include/: yder-cfg.h.in  yder.h
search/: all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js
src/: Makefile  yder.c  yder.h
test/: .gitignore  Makefile  yder_test  yder_test.c
